--- a/www/index.html
+++ b/www/index.html
@@ -31,9 +31,9 @@
     </head>
     <body>
         <div class="app">
-            <h1>PhoneGap is editable</h1>
+            <h1>Is my phone better than a blackberry?</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Hacking Device</p>
+                <p class="event listening">Checking Device</p>
                 <p class="event received">Device is Better than a blackberry</p>
             </div>
         </div>
