--- a/www/index.html
+++ b/www/index.html
@@ -42,5 +42,11 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+        <script type="text/javascript">
+        document.addEventListener("deviceready", onDeviceReady, false);
+    function onDeviceReady() {
+        console.log(device.cordova);
+    }
+    </script>
     </body>
 </html>
