--- a/www/index.html
+++ b/www/index.html
@@ -35,11 +35,12 @@
             <div id="deviceready" class="blink">
                 <p class="event listening">Checking Device</p>
                 <p class="event received">Device is Better than a blackberry</p>
-                
+
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/deviceinformation.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
