--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,14 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+        <script type="text/javascript">
+            var deviceInfo = cordova.require("cordova/plugin/DeviceInformation");
+deviceInfo.get(function(result) {
+        console.log("result = " + result);
+    }, function() {
+        console.log("error");
+    });
+        </script>
 
     </body>
 </html>
