--- a/www/index.html
+++ b/www/index.html
@@ -27,14 +27,14 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Better than blackberry?</title>
+        <title>Girlfriend Checker?</title>
     </head>
     <body>
         <div class="app">
-            <h1>Is my phone better than a blackberry?</h1>
+            <h1>Does Dez have a Girlfriend?</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Checking Device</p>
-                <p class="event received">Device is Better than a blackberry</p>
+                <p class="event listening">Maybe this time</p>
+                <p class="event received">Dez doesn't have a girlfriend</p>
 
             </div>
         </div>
