--- a/www/index.html
+++ b/www/index.html
@@ -44,5 +44,6 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+        <div id="area"></div>
     </body>
 </html>
