--- a/www/index.html
+++ b/www/index.html
@@ -34,13 +34,12 @@
             <h1>Does Dez have a Girlfriend?</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Maybe this time</p>
-                <p class="event received">Dez doesn't have a girlfriend</p>
+                <p class="event received">Dez has a girlfriend</p>
 
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/deviceinformation.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
