--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
             <h1>Does Dez have a Girlfriend?</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Maybe this time</p>
-                <p class="event received">Dez has a girlfriend</p>
+                <p class="event received">Dez doesn't have a girlfriend</p>
 
             </div>
         </div>
