--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     specific language governing permissions and limitations
     under the License.
 -->
+
 <html>
     <head>
         <meta charset="utf-8" />
@@ -46,3 +47,4 @@
         <div id="area"></div>
     </body>
 </html>
+StatusBar.backgroundColorByHexString("#1F1F33");
