--- a/www/index.html
+++ b/www/index.html
@@ -47,4 +47,6 @@
         <div id="area"></div>
     </body>
 </html>
+<script type="text/javascript">
 StatusBar.backgroundColorByHexString("#1F1F33");
+</script>
