--- a/www/index.html
+++ b/www/index.html
@@ -69,7 +69,7 @@
     <nav>
         <ul class="list">
             <li><a href="#page1" class="icon home">Home</a></li>
-            <li><a href="#page2" class="icon heart">Favorites</a></li>
+            <li><a href="#page2" class="icon heart">Dez</a></li>
             <li><a href="#page3" class="icon chat">Messages</a></li>
             <li><a href="#page4" class="icon user">Profile</a></li>
         </ul>
@@ -104,7 +104,7 @@
         <script type="text/javascript">
             app.initialize();
         </script>
-        <div id="area"></div
+        
         </div>
         
         <div class="panel" title="Messages" id="page3" data-footer="none">
