--- a/www/index.html
+++ b/www/index.html
@@ -118,7 +118,7 @@
                 <a id="menubadge" onclick='$.ui.toggleSideMenu()' class='menuButton' style="float:left !important"></a>
                 <h1>Graph</h1>
             </header>
-            <div class="myFirstChart" style="width:80%; height:150px;"></div>
+            <div class="myFirstChart" style="width:300px; height:150px;"></div>
             <script>
                 new Contour({
                 el: '.myFirstChart'
