--- a/www/index.html
+++ b/www/index.html
@@ -118,7 +118,7 @@
                 <a id="menubadge" onclick='$.ui.toggleSideMenu()' class='menuButton' style="float:left !important"></a>
                 <h1>Graph</h1>
             </header>
-            <button onclick="makeGraph()">Click me</button>
+            <button onclick="makeGraph()" id="graphB1">Click me</button>
             <div class="myFirstChart" style="width:300px; height:150px;"></div>
             <script>
                function makeGraph(){
