--- a/www/index.html
+++ b/www/index.html
@@ -29,23 +29,25 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="appframework/af.ui.css" />
-    <link rel="stylesheet" type="text/css" href="appframework/icons.css" />
-    <script type="text/javascript" charset="utf-8" src="appframework/appframework.ui.min.js"></script>
-    <!--AppFramework plugin for sliding side menu-->
-    <script type="text/javascript" charset="utf-8" src="appframework/plugins/af.slidemenu.js"></script>
-
-    <!-- phantom library, needed for XDK "legacy" container api calls -->
-    <script src="intelxdk.js"></script>
-    <!-- phantom library, needed for Cordova api calls -->
-    <script src="cordova.js"></script>
-    <!-- phantom library, needed for XDK "legacy" container CORS -->
-    <script src="xhr.js"></script>
-    <link rel="stylesheet" href="css/contour.min.css">
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="js/lodash.js"></script>
-    <script src="js/d3.min.js"></script>
-    <script src="js/lodash.js"></script>
-    <script src="js/contour.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="appframework/icons.css" />
+        <script type="text/javascript" charset="utf-8" src="appframework/appframework.ui.min.js"></script>
+        <!--AppFramework plugin for sliding side menu-->
+        <script type="text/javascript" charset="utf-8" src="appframework/plugins/af.slidemenu.js"></script>
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css">
+        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
+        <!-- phantom library, needed for XDK "legacy" container api calls -->
+        <script src="intelxdk.js"></script>
+        <!-- phantom library, needed for Cordova api calls -->
+        <script src="cordova.js"></script>
+        <!-- phantom library, needed for XDK "legacy" container CORS -->
+        <script src="xhr.js"></script>
+        <link rel="stylesheet" href="css/contour.min.css">
+        <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+        <script src="js/lodash.js"></script>
+        <script src="js/d3.min.js"></script>
+        <script src="js/lodash.js"></script>
+        <script src="js/contour.min.js"></script>
     
     <script>
         var onDeviceReady=function(){                             // called when Cordova is ready
@@ -139,7 +141,27 @@
                 <a id="menubadge" onclick='$.ui.toggleSideMenu()' class='menuButton' style="float:left !important"></a>
                 <h1>Profile</h1>
             </header>
-            <p>This is view for fourth menu item</p>
+            <script type="text/javascript" src="js/index.js"></script>
+            <div data-role="page" id="pageone">
+  <div data-role="header">
+    <h1>The taphold Event</h1>
+  </div>
+
+  <div data-role="main" class="ui-content">
+  
+        <button id="tapholdtext">If you tap and hold me for one second, I will disappear</button>
+        <button id="taptext">If you tap me I will turn red.</button>
+        <button id="swipetext">If you swipe left on me I will turn green and blue if you swipe right.</button>
+ 
+  </div>
+  
+  
+
+  <div data-role="footer">
+    <h1>Footer Text</h1>
+  </div>
+</div> 
+
         </div>
         
     </div>
