--- a/www/index.html
+++ b/www/index.html
@@ -187,6 +187,8 @@
         <button id="tapholdtext">If you tap and hold me for one second, I will disappear</button>
         <button id="taptext">If you tap me I will turn red.</button>
         <button id="swipetext">If you swipe left on me I will turn green and blue if you swipe right.</button>
+
+        <div id="rnd"></div>
  
   </div>
   
