--- a/www/index.html
+++ b/www/index.html
@@ -188,7 +188,7 @@
         <button id="taptext">If you tap me I will turn red.</button>
         <button id="swipetext">If you swipe left on me I will turn green and blue if you swipe right.</button>
 
-        <p id="rnd"></p>>
+        <p id="rnd"></p>
  
   </div>
   
