--- a/www/index.html
+++ b/www/index.html
@@ -188,6 +188,8 @@
         <button id="taptext">If you tap me I will turn red.</button>
         <button id="swipetext">If you swipe left on me I will turn green and blue if you swipe right.</button>
 
+
+        <button id="makeRnd">Make A Random</button>
         <p id="rnd"></p>
  
   </div>
