--- a/www/index.html
+++ b/www/index.html
@@ -212,7 +212,7 @@
             </div>
 
         <div data-role="main" class="ui-content">
-  
+       <!--
         <button id="tapholdtext">If you tap and hold me for one second, I will disappear</button>
         <button id="taptext">If you tap me I will turn red.</button>
         <button id="swipetext">If you swipe left on me I will turn green and blue if you swipe right.</button>
@@ -220,6 +220,17 @@
 
         <button id="makeRnd">Make A Random</button>
         <p id="rnd"></p>
+    -->
+
+        <button id="getLocationButton">Get Location</button>
+        <label for="longtext">Longitude:</label>
+        <input type="text" name="longtext" id="longtext" value=""  />
+        <label for="lattext">Latitude:</label>
+        <input type="text" name="lattext" id="lattext" value=""  />
+        <label for="time">Time:</label>
+        <input type="text" name="time" id="time" value=""  />
+
+
  
   </div>
   
