--- a/www/index.html
+++ b/www/index.html
@@ -227,8 +227,18 @@
         <input type="text" name="longtext" id="longtext" value=""  />
         <label for="lattext">Latitude:</label>
         <input type="text" name="lattext" id="lattext" value=""  />
+        <label for="headtext">Heading:</label>
+        <input type="text" name="headtext" id="headtext" value=""  />
+        <label for="speedtext">Speed:</label>
+        <input type="text" name="speedtext" id="speedtext" value=""  />
+        <label for="alttext">Altitude:</label>
+        <input type="text" name="alttext" id="alttext" value=""  />
         <label for="time">Time:</label>
         <input type="text" name="time" id="time" value=""  />
+        <label for="acctext">Accuracy:</label>
+        <input type="text" name="acctext" id="acctext" value=""  />
+        <label for="altactext">Altitude Accuracy:</label>
+        <input type="text" name="altactext" id="altactext" value=""  />
 
 
  
