--- a/www/index.html
+++ b/www/index.html
@@ -240,6 +240,12 @@
         <label for="altactext">Altitude Accuracy:</label>
         <input type="text" name="altactext" id="altactext" value=""  />
 
+        <label for="flip-a">Select slider:</label>
+        <select name="slider" id="flip-a" data-role="slider">
+        <option value="off">Off</option>
+        <option value="on">On</option>
+        </select> 
+
 
  
   </div>
