--- a/www/index.html
+++ b/www/index.html
@@ -223,6 +223,7 @@
     -->
 
         <button id="getLocationButton">Get Location</button>
+        <button id="stopButton">Stop getting Location</button>
         <label for="longtext">Longitude:</label>
         <input type="text" name="longtext" id="longtext" value=""  />
         <label for="lattext">Latitude:</label>
@@ -240,11 +241,7 @@
         <label for="altactext">Altitude Accuracy:</label>
         <input type="text" name="altactext" id="altactext" value=""  />
 
-        <label for="flip-a">Select slider:</label>
-        <select name="slider" id="flip-a" data-role="slider">
-        <option value="off">Off</option>
-        <option value="on">On</option>
-        </select> 
+
 
 
  
