--- a/www/index.html
+++ b/www/index.html
@@ -231,6 +231,7 @@
             <div data-role="header">
                 <h1>Location</h1>
             </div>
+            <div id="geolocation"></div>
 
         <div data-role="main" class="ui-content">
        <!--
