--- a/www/index.html
+++ b/www/index.html
@@ -211,7 +211,7 @@
                 <script type="text/javascript"
                 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGPztwY1erO8b2UO9IDhhI8lldfDP0-Is">
                 </script>
-                <script type="text/javascript" src="js/maps.js"></script>
+                <script type="text/javascript" src="js/map.js"></script>
                 <script type="text/javascript" src="index.js"></script>
             </header>
             <div id="map-canvas"></div>
