--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,11 @@
             <header>
                 <a id="menubadge" onclick='$.ui.toggleSideMenu()' class='menuButton' style="float:left !important"></a>
                 <h1>Home</h1>
-            </header>         
+            </header>
+            <div>
+                <h1>Welcome</h1>
+                <p>Possibly the worlds first field hockey based statistics app</p>
+            </div>         
         </div>
         
         <div class="panel" title="Dez" id="page2" data-footer="none">
